crates/rwkv-derive/tests/ui/fail/config_builder_non_string_raw.rs
use rwkv_derive::ConfigBuilder;

#[derive(ConfigBuilder)]
#[config_builder(raw = crate::RawConfig, cell = "CONFIG")]
pub struct FinalConfig {
    value: usize,
}

fn main() {}
